run_leidrn is ready and added to: example_runLeiden.cpp. after more tests it will be ready to integrate to Arachne

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.5)
-project(Clustering_Algorithms)
+project(Clustering_Algorithms VERSION 0.1 LANGUAGES CXX)
 
 # Set the C++ standard
 set(CMAKE_CXX_STANDARD 17)
@@ -8,3 +8,6 @@ set(CMAKE_CXX_EXTENSIONS OFF) #Disables compiler-specific extensions, promoting 
 
 # Add the subdirectory containing your source files
 add_subdirectory(src)
+
+set(CMAKE_BUILD_TYPE Debug)
+set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -g -O0")
