--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,8 @@
 [submodule "igraph"]
 	path = igraph
-	url = https://github.com/igraph/igraph.git
+  url = https://github.com/igraph/igraph.git
+  branch = master
 [submodule "libleidenalg"]
 	path = libleidenalg
-	url = https://github.com/vtraag/libleidenalg.git
+  url = https://github.com/vtraag/libleidenalg.git
+  branch = main
