Add TSV graph clustering functionality for UIUC project

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,6 +10,9 @@ link_directories(${CMAKE_SOURCE_DIR}/external/install/lib64)
 # Define Leiden wrapper executable
 add_executable(leiden_test src/leiden_wrapper.cpp src/run_leiden.cpp)
 
+# Define new clustering executable
+add_executable(leiden_clustering src/leiden_clustering.cpp src/run_leiden.cpp)
+
 # Link with igraph and libleidenalg
 target_link_libraries(leiden_test
     ${CMAKE_SOURCE_DIR}/external/install/lib64/libigraph.a
