Pin submodules: Arrow 23.0.0, igraph 0.10.15, libleidenalg 0.11.1

--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "external/igraph"]
 	path = external/igraph
 	url = https://github.com/igraph/igraph.git
+[submodule "external/arrow"]
+	path = external/arrow
+	url = https://github.com/apache/arrow
